# upgradable-channel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
diagrams/: Upgradable channel.drawio
examples/: channel_mock.rs  test.rs
src/: channel.rs  interleaved_channel.rs  lib.rs  mocks.rs  traits.rs  types.rs  utils.rs
src/channel/: channel_message.rs  channel_states.rs  implementations.rs
src/channel/channel_states/: init_channel_state.rs
src/channel/implementations/: async_read_impl.rs  async_write_impl.rs  channel_impl.rs  upgradable_channel_impl.rs
src/interleaved_channel/: child_channel.rs
src/mocks/: channel_mock.rs
src/traits/: async_read.rs  async_write.rs  channel_step.rs
src/utils/: create_framed_stream.rs  test_framed_stream.rs
