[package]
name = "upgradable-channel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
cs-utils = { version = "0.21", features = ["test", "traits", "async", "experimental"] }
cs-trace = { version = "0.12" }
connection-utils = { version = "0.3", features = ["test"] }
serde = "1"
futures = { version = "0.3" }
bytes = "1.1"
async-trait = "0.1"
multiplexed-connection = "0.4"
thiserror = "1"

[dev-dependencies]
rstest = "0.12.0"
